VYRKCATG-340: Latest Gearwrench Australia config using the new theme.

--- a/config/gearwrench_au/default/block.block.country_switch_block.yml
+++ b/config/gearwrench_au/default/block.block.country_switch_block.yml
@@ -1,18 +1,18 @@
 uuid: 889db3a2-a16f-4bde-9403-e6f14af758ef
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - block_class
     - gearwrench_core
   theme:
-    - gearwrench
+    - gearwrench_au
 third_party_settings:
   block_class:
     classes: block--country-switch
 id: country_switch_block
 theme: gearwrench
-region: header
+region: ''
 weight: -3
 provider: null
 plugin: country_switch
