--- a/config/gearwrench_au/default/block.block.footer_navigation_block.yml
+++ b/config/gearwrench_au/default/block.block.footer_navigation_block.yml
@@ -1,14 +1,14 @@
 uuid: e4781bdf-1ba4-409a-b078-7d729feeccef
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - gearwrench_core
   theme:
-    - gearwrench
+    - gearwrench_au
 id: footer_navigation_block
 theme: gearwrench
-region: footer_first
+region: ''
 weight: 0
 provider: null
 plugin: footer_navigation_block
