--- a/config/gearwrench_au/default/block.block.gearwrench_au_content.yml
+++ b/config/gearwrench_au/default/block.block.gearwrench_au_content.yml
@@ -1,15 +1,17 @@
-uuid: 65510bf9-0a04-4fc5-9d09-39b9373137dc
+uuid: 2b226d26-09db-49e8-b108-dd51d107fc9e
 langcode: en
 status: true
 dependencies:
   module:
     - system
   theme:
-    - gearwrench
-id: gearwrench_content
-theme: gearwrench
+    - gearwrench_au
+_core:
+  default_config_hash: 9EoWV2Lot6FVSr50t4hoKgiz1LIXYWNG-IIPYsWxBqo
+id: gearwrench_au_content
+theme: gearwrench_au
 region: content
-weight: -1
+weight: 0
 provider: null
 plugin: system_main_block
 settings:
