--- a/config/gearwrench_au/default/block.block.gearwrench_au_footer.yml
+++ b/config/gearwrench_au/default/block.block.gearwrench_au_footer.yml
@@ -1,17 +1,19 @@
-uuid: 89c709c7-8b98-4371-839f-54852d3f0c82
+uuid: be937ff6-8b6b-4c23-9d9a-5dce09d1d9bc
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - system.menu.footer
   module:
     - system
   theme:
-    - gearwrench
-id: gearwrench_footer
-theme: gearwrench
-region: footer_first
-weight: -5
+    - gearwrench_au
+_core:
+  default_config_hash: 8zRjTNbfNAJ94lQpZDu6MkyD87GYJ2zpH9VQPVmRbcM
+id: gearwrench_au_footer
+theme: gearwrench_au
+region: header
+weight: 0
 provider: null
 plugin: 'system_menu_block:footer'
 settings:
