--- a/config/gearwrench_au/default/block.block.gearwrench_au_help.yml
+++ b/config/gearwrench_au/default/block.block.gearwrench_au_help.yml
@@ -1,15 +1,17 @@
-uuid: c7819f52-cf51-4f3f-999d-cce4f6916a52
+uuid: 24f2760a-2fd1-4c68-832f-72757dd9022b
 langcode: en
 status: true
 dependencies:
   module:
     - help
   theme:
-    - gearwrench
-id: gearwrench_help
-theme: gearwrench
+    - gearwrench_au
+_core:
+  default_config_hash: 8I8iACSa0sKO3k3jlvUG1ge52rfcKX7USJAQYnzuBgg
+id: gearwrench_au_help
+theme: gearwrench_au
 region: content
-weight: -4
+weight: -30
 provider: null
 plugin: help_block
 settings:
