--- a/config/gearwrench_au/default/block.block.gearwrench_au_local_actions.yml
+++ b/config/gearwrench_au/default/block.block.gearwrench_au_local_actions.yml
@@ -1,13 +1,15 @@
-uuid: 060c38f0-d3a3-4439-b857-d90c1083a3e3
+uuid: 50999ee3-bcf7-454b-9532-50e73136303b
 langcode: en
 status: true
 dependencies:
   theme:
-    - gearwrench
-id: gearwrench_local_actions
-theme: gearwrench
+    - gearwrench_au
+_core:
+  default_config_hash: 13GQpeITIJsp1kyPniXtWZfyFH87vb1xxJCHifL4UeE
+id: gearwrench_au_local_actions
+theme: gearwrench_au
 region: content
-weight: -3
+weight: -20
 provider: null
 plugin: local_actions_block
 settings:
