--- a/config/gearwrench_au/default/block.block.gearwrench_au_local_tasks.yml
+++ b/config/gearwrench_au/default/block.block.gearwrench_au_local_tasks.yml
@@ -1,13 +1,15 @@
-uuid: 6bbd63e4-4179-4eb9-9fe8-97b4242b9775
+uuid: f375c5f6-6755-4d8a-8953-8c05d3a733f8
 langcode: en
 status: true
 dependencies:
   theme:
-    - gearwrench
-id: gearwrench_local_tasks
-theme: gearwrench
+    - gearwrench_au
+_core:
+  default_config_hash: X9I1OB0W3WlWtrK-CNcg6hNWwa8wficanpH8pYnDZDE
+id: gearwrench_au_local_tasks
+theme: gearwrench_au
 region: content
-weight: -6
+weight: -40
 provider: null
 plugin: local_tasks_block
 settings:
