--- a/config/gearwrench_au/default/block.block.gearwrench_au_messages.yml
+++ b/config/gearwrench_au/default/block.block.gearwrench_au_messages.yml
@@ -1,15 +1,17 @@
-uuid: 5b52e26c-767f-4094-a970-430a3b9ea460
+uuid: f04ddddc-adeb-48de-a7ff-7b066597197c
 langcode: en
 status: true
 dependencies:
   module:
     - system
   theme:
-    - gearwrench
-id: gearwrench_messages
-theme: gearwrench
-region: pre_content
-weight: -6
+    - gearwrench_au
+_core:
+  default_config_hash: KHQIJ7Vfl25lTjzIc7qIvnuistt-Mw2O0kG4jCofmkI
+id: gearwrench_au_messages
+theme: gearwrench_au
+region: header
+weight: 0
 provider: null
 plugin: system_messages_block
 settings:
