--- a/config/gearwrench_au/default/block.block.header_search_block.yml
+++ b/config/gearwrench_au/default/block.block.header_search_block.yml
@@ -1,18 +1,18 @@
 uuid: d7c60425-8350-4945-a1c5-ee8f0a617780
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - block_class
     - gearwrench_core
   theme:
-    - gearwrench
+    - gearwrench_au
 third_party_settings:
   block_class:
     classes: block--header-search
 id: header_search_block
 theme: gearwrench
-region: header
+region: ''
 weight: -4
 provider: null
 plugin: header_search
