--- a/config/gearwrench_au/default/block.block.productbuynowsticky.yml
+++ b/config/gearwrench_au/default/block.block.productbuynowsticky.yml
@@ -1,15 +1,15 @@
 uuid: 7d2e454a-f7c2-4ab2-9b06-004faed58638
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - gearwrench_core
     - node
   theme:
-    - gearwrench
+    - gearwrench_au
 id: productbuynowsticky
 theme: gearwrench
-region: pre_content
+region: ''
 weight: -7
 provider: null
 plugin: product_buy_now_sticky
