--- a/config/gearwrench_au/default/responsive_image.styles.content_callout.yml
+++ b/config/gearwrench_au/default/responsive_image.styles.content_callout.yml
@@ -6,7 +6,7 @@ dependencies:
     - image.style.medium_1x1
     - image.style.small_1x1
   theme:
-    - gearwrench
+    - gearwrench_au
 id: content_callout
 label: 'Content Callout'
 image_style_mappings:
