--- a/config/gearwrench_au/default/block.block.gearwrench_au_breadcrumbs.yml
+++ b/config/gearwrench_au/default/block.block.gearwrench_au_breadcrumbs.yml
@@ -1,19 +1,17 @@
-uuid: 42ee8634-8808-4e2d-9d73-d008c8bd494e
+uuid: 1a0752f7-274c-4f25-823e-8e69d95cd8fa
 langcode: en
 status: true
 dependencies:
   module:
-    - block_class
     - system
   theme:
-    - gearwrench
-third_party_settings:
-  block_class:
-    classes: breadcrumbs
-id: gearwrench_breadcrumbs
-theme: gearwrench
-region: content
-weight: -5
+    - gearwrench_au
+_core:
+  default_config_hash: oXUb3JZR2WW5VOdw4HrhRicCsq51mCgLfRyvheG68ck
+id: gearwrench_au_breadcrumbs
+theme: gearwrench_au
+region: header
+weight: 0
 provider: null
 plugin: system_breadcrumb_block
 settings:
