--- a/config/gearwrench_au/default/block.block.webform.yml
+++ b/config/gearwrench_au/default/block.block.webform.yml
@@ -1,16 +1,16 @@
 uuid: a69094c2-b79d-4b2f-a890-73a2ec9eca84
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - webform.webform.email_sign_up
   module:
     - webform
   theme:
-    - gearwrench
+    - gearwrench_au
 id: webform
 theme: gearwrench
-region: footer_second
+region: ''
 weight: 0
 provider: null
 plugin: webform_block
