--- a/config/gearwrench_au/default/block.block.wherebuypricespiderwidget.yml
+++ b/config/gearwrench_au/default/block.block.wherebuypricespiderwidget.yml
@@ -1,6 +1,6 @@
 uuid: 47f9abf6-2e21-4320-9dfd-dce029a63a29
 langcode: en
-status: true
+status: false
 dependencies:
   content:
     - 'block_content:basic:9610659b-4dba-4225-b330-4dda5b6d95cf'
@@ -9,13 +9,13 @@ dependencies:
     - block_content
     - system
   theme:
-    - gearwrench
+    - gearwrench_au
 third_party_settings:
   block_class:
     classes: block-pricespider-generic-widget-block
 id: wherebuypricespiderwidget
 theme: gearwrench
-region: content
+region: ''
 weight: 0
 provider: null
 plugin: 'block_content:9610659b-4dba-4225-b330-4dda5b6d95cf'
