--- a/config/gearwrench_au/default/responsive_image.styles.hero_basic.yml
+++ b/config/gearwrench_au/default/responsive_image.styles.hero_basic.yml
@@ -6,7 +6,7 @@ dependencies:
     - image.style.hero_banner
     - image.style.hero_banner_mobile
   theme:
-    - gearwrench
+    - gearwrench_au
 id: hero_basic
 label: 'Hero - Basic'
 image_style_mappings:
