--- a/config/gearwrench_au/default/responsive_image.styles.teaser.yml
+++ b/config/gearwrench_au/default/responsive_image.styles.teaser.yml
@@ -6,7 +6,7 @@ dependencies:
     - image.style.small_1x1
     - image.style.tiny_1x1
   theme:
-    - gearwrench
+    - gearwrench_au
 id: teaser
 label: Teaser
 image_style_mappings:
