VYRKCATG-340: Updateded block configurations.

--- a/config/gearwrench_au/default/block.block.country_switch_block.yml
+++ b/config/gearwrench_au/default/block.block.country_switch_block.yml
@@ -1,6 +1,6 @@
 uuid: 889db3a2-a16f-4bde-9403-e6f14af758ef
 langcode: en
-status: false
+status: true
 dependencies:
   module:
     - block_class
@@ -11,9 +11,9 @@ third_party_settings:
   block_class:
     classes: block--country-switch
 id: country_switch_block
-theme: gearwrench
-region: ''
-weight: -3
+theme: gearwrench_au
+region: header
+weight: -5
 provider: null
 plugin: country_switch
 settings:
