--- a/config/gearwrench_au/default/block.block.footer_navigation_block.yml
+++ b/config/gearwrench_au/default/block.block.footer_navigation_block.yml
@@ -1,15 +1,15 @@
 uuid: e4781bdf-1ba4-409a-b078-7d729feeccef
 langcode: en
-status: false
+status: true
 dependencies:
   module:
     - gearwrench_core
   theme:
     - gearwrench_au
 id: footer_navigation_block
-theme: gearwrench
-region: ''
-weight: 0
+theme: gearwrench_au
+region: footer_first
+weight: -8
 provider: null
 plugin: footer_navigation_block
 settings:
