--- a/config/gearwrench_au/default/block.block.header_menu_main.yml
+++ b/config/gearwrench_au/default/block.block.header_menu_main.yml
@@ -1,6 +1,6 @@
 uuid: 00629519-8cf5-43cb-93e1-2c1de1362c23
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - system.menu.main
@@ -13,9 +13,9 @@ third_party_settings:
   block_class:
     classes: block--header-menu-main
 id: header_menu_main
-theme: gearwrench
-region: ''
-weight: -5
+theme: gearwrench_au
+region: header
+weight: -7
 provider: null
 plugin: 'system_menu_block:main'
 settings:
