--- a/config/gearwrench_au/default/block.block.header_search_block.yml
+++ b/config/gearwrench_au/default/block.block.header_search_block.yml
@@ -1,6 +1,6 @@
 uuid: d7c60425-8350-4945-a1c5-ee8f0a617780
 langcode: en
-status: false
+status: true
 dependencies:
   module:
     - block_class
@@ -11,9 +11,9 @@ third_party_settings:
   block_class:
     classes: block--header-search
 id: header_search_block
-theme: gearwrench
-region: ''
-weight: -4
+theme: gearwrench_au
+region: header
+weight: -6
 provider: null
 plugin: header_search
 settings:
