--- a/config/gearwrench_au/default/block.block.productbuynowsticky.yml
+++ b/config/gearwrench_au/default/block.block.productbuynowsticky.yml
@@ -1,6 +1,6 @@
 uuid: 7d2e454a-f7c2-4ab2-9b06-004faed58638
 langcode: en
-status: false
+status: true
 dependencies:
   module:
     - gearwrench_core
@@ -8,9 +8,9 @@ dependencies:
   theme:
     - gearwrench_au
 id: productbuynowsticky
-theme: gearwrench
-region: ''
-weight: -7
+theme: gearwrench_au
+region: pre_content
+weight: -8
 provider: null
 plugin: product_buy_now_sticky
 settings:
