--- a/config/gearwrench_au/default/block.block.gearwrench_au_footer.yml
+++ b/config/gearwrench_au/default/block.block.gearwrench_au_footer.yml
@@ -1,6 +1,6 @@
 uuid: be937ff6-8b6b-4c23-9d9a-5dce09d1d9bc
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - system.menu.footer
@@ -12,8 +12,8 @@ _core:
   default_config_hash: 8zRjTNbfNAJ94lQpZDu6MkyD87GYJ2zpH9VQPVmRbcM
 id: gearwrench_au_footer
 theme: gearwrench_au
-region: header
-weight: 0
+region: footer_first
+weight: -7
 provider: null
 plugin: 'system_menu_block:footer'
 settings:
