--- a/config/gearwrench_au/default/block.block.gearwrench_au_messages.yml
+++ b/config/gearwrench_au/default/block.block.gearwrench_au_messages.yml
@@ -10,8 +10,8 @@ _core:
   default_config_hash: KHQIJ7Vfl25lTjzIc7qIvnuistt-Mw2O0kG4jCofmkI
 id: gearwrench_au_messages
 theme: gearwrench_au
-region: header
-weight: 0
+region: pre_content
+weight: -7
 provider: null
 plugin: system_messages_block
 settings:
