--- a/config/gearwrench_au/default/block.block.views_block__acquia_search_block_1.yml
+++ b/config/gearwrench_au/default/block.block.views_block__acquia_search_block_1.yml
@@ -1,6 +1,6 @@
 uuid: 419e2de7-68b9-4751-a632-c39086a449a1
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - views.view.acquia_search
@@ -10,9 +10,9 @@ dependencies:
   theme:
     - gearwrench_au
 id: views_block__acquia_search_block_1
-theme: gearwrench
-region: ''
-weight: 0
+theme: gearwrench_au
+region: post_content
+weight: -8
 provider: null
 plugin: 'views_block:acquia_search-block_1'
 settings:
