--- a/config/gearwrench_au/default/block.block.webform.yml
+++ b/config/gearwrench_au/default/block.block.webform.yml
@@ -1,6 +1,6 @@
 uuid: a69094c2-b79d-4b2f-a890-73a2ec9eca84
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - webform.webform.email_sign_up
@@ -9,9 +9,9 @@ dependencies:
   theme:
     - gearwrench_au
 id: webform
-theme: gearwrench
-region: ''
-weight: 0
+theme: gearwrench_au
+region: footer_second
+weight: -8
 provider: null
 plugin: webform_block
 settings:
