--- a/config/gearwrench_au/default/block.block.wherebuypricespiderwidget.yml
+++ b/config/gearwrench_au/default/block.block.wherebuypricespiderwidget.yml
@@ -2,11 +2,8 @@ uuid: 47f9abf6-2e21-4320-9dfd-dce029a63a29
 langcode: en
 status: false
 dependencies:
-  content:
-    - 'block_content:basic:9610659b-4dba-4225-b330-4dda5b6d95cf'
   module:
     - block_class
-    - block_content
     - system
   theme:
     - gearwrench_au
@@ -14,9 +11,9 @@ third_party_settings:
   block_class:
     classes: block-pricespider-generic-widget-block
 id: wherebuypricespiderwidget
-theme: gearwrench
-region: ''
-weight: 0
+theme: gearwrench_au
+region: header
+weight: -4
 provider: null
 plugin: 'block_content:9610659b-4dba-4225-b330-4dda5b6d95cf'
 settings:
