--- a/config/gearwrench_au/default/block.block.gearwrench_au_branding.yml
+++ b/config/gearwrench_au/default/block.block.gearwrench_au_branding.yml
@@ -3,9 +3,13 @@ langcode: en
 status: true
 dependencies:
   module:
+    - block_class
     - system
   theme:
     - gearwrench_au
+third_party_settings:
+  block_class:
+    classes: block--header-branding
 _core:
   default_config_hash: NDwadleLD3YVSbDUaakxyYZyINYtkFtOVGShfq4kWy8
 id: gearwrench_au_branding
@@ -20,6 +24,6 @@ settings:
   label_display: '0'
   provider: system
   use_site_logo: true
-  use_site_name: true
-  use_site_slogan: true
+  use_site_name: false
+  use_site_slogan: false
 visibility: {  }
