--- a/config/gearwrench_au/default/core.entity_form_display.node.landing_page.default.yml
+++ b/config/gearwrench_au/default/core.entity_form_display.node.landing_page.default.yml
@@ -26,6 +26,7 @@ third_party_settings:
         - group_main
         - group_content
       label: Tabs
+      region: content
       parent_name: ''
       weight: 0
       format_type: tabs
@@ -36,12 +37,13 @@ third_party_settings:
     group_main:
       children:
         - title
-        - field_component_hero
         - body
+        - field_component_hero
         - field_media
       label: Main
+      region: content
       parent_name: group_tabs
-      weight: 6
+      weight: 10
       format_type: tab
       format_settings:
         classes: ''
@@ -53,8 +55,9 @@ third_party_settings:
       children:
         - field_components
       label: Content
+      region: content
       parent_name: group_tabs
-      weight: 7
+      weight: 11
       format_type: tab
       format_settings:
         classes: ''
@@ -71,12 +74,13 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 3
+    weight: 12
     region: content
     settings:
       rows: 9
       summary_rows: 3
       placeholder: ''
+      show_summary: false
     third_party_settings:
       allowed_formats:
         hide_help: '1'
@@ -89,7 +93,7 @@ content:
     third_party_settings: {  }
   field_component_hero:
     type: paragraphs_component
-    weight: 2
+    weight: 13
     region: content
     settings:
       title: Hero
@@ -122,27 +126,28 @@ content:
         limit_values: '0'
   field_media:
     type: media_library_widget
-    weight: 4
+    weight: 14
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_meta_tags:
     type: metatag_firehose
-    weight: 27
+    weight: 9
     region: content
-    settings: {  }
+    settings:
+      sidebar: true
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 8
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -155,7 +160,7 @@ content:
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 10
+    weight: 8
     region: content
     settings:
       display_label: true
@@ -169,7 +174,7 @@ content:
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 1
+    weight: 11
     region: content
     settings:
       size: 60
@@ -181,11 +186,12 @@ content:
     region: content
     settings:
       match_operator: CONTAINS
+      match_limit: 10
       size: 60
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 9
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
