--- a/config/gearwrench_au/default/core.entity_form_display.paragraph.featured_links.default.yml
+++ b/config/gearwrench_au/default/core.entity_form_display.paragraph.featured_links.default.yml
@@ -21,6 +21,7 @@ third_party_settings:
         - field_class_custom
         - field_html_anchor
       label: Settings
+      region: content
       parent_name: ''
       weight: 0
       format_type: settings
@@ -52,7 +53,7 @@ content:
     third_party_settings: {  }
   field_links:
     type: linkit
-    weight: 5
+    weight: 2
     region: content
     settings:
       placeholder_url: ''
@@ -67,7 +68,7 @@ content:
     third_party_settings: {  }
   field_title:
     type: string_textfield
-    weight: 3
+    weight: 1
     region: content
     settings:
       size: 60
