--- a/config/gearwrench_au/default/core.entity_form_display.paragraph.accordion_item.default.yml
+++ b/config/gearwrench_au/default/core.entity_form_display.paragraph.accordion_item.default.yml
@@ -17,6 +17,7 @@ third_party_settings:
         - field_enabled
         - status
       label: Settings
+      region: content
       parent_name: ''
       weight: 0
       format_type: settings
@@ -32,7 +33,7 @@ mode: default
 content:
   field_components:
     type: paragraphs
-    weight: 5
+    weight: 2
     region: content
     settings:
       title: Component
@@ -40,6 +41,7 @@ content:
       edit_mode: closed
       closed_mode: preview
       autocollapse: all
+      closed_mode_threshold: 0
       add_mode: dropdown
       form_display_mode: default
       default_paragraph_type: _none
