--- a/config/gearwrench_au/default/core.entity_form_display.paragraph.featured_media.default.yml
+++ b/config/gearwrench_au/default/core.entity_form_display.paragraph.featured_media.default.yml
@@ -21,6 +21,7 @@ third_party_settings:
         - field_class_custom
         - field_html_anchor
       label: Settings
+      region: content
       parent_name: ''
       weight: 0
       format_type: settings
@@ -52,13 +53,13 @@ content:
     third_party_settings: {  }
   field_layout:
     type: options_select
-    weight: 3
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
   field_media_items:
     type: media_library_widget
-    weight: 4
+    weight: 2
     region: content
     settings:
       media_types: {  }
