--- a/config/gearwrench_au/default/core.entity_form_display.paragraph.pullquote.default.yml
+++ b/config/gearwrench_au/default/core.entity_form_display.paragraph.pullquote.default.yml
@@ -21,6 +21,7 @@ third_party_settings:
         - field_class_custom
         - field_html_anchor
       label: Settings
+      region: content
       parent_name: ''
       weight: 0
       format_type: settings
@@ -36,7 +37,7 @@ mode: default
 content:
   field_attribution:
     type: string_textfield
-    weight: 4
+    weight: 2
     region: content
     settings:
       size: 60
@@ -52,7 +53,7 @@ content:
     third_party_settings: {  }
   field_content:
     type: text_textarea
-    weight: 3
+    weight: 1
     region: content
     settings:
       rows: 5
