--- a/config/crescenttool_au/default/core.extension.yml
+++ b/config/crescenttool_au/default/core.extension.yml
@@ -36,6 +36,7 @@ module:
   config_ignore: 0
   config_split: 0
   contextual: 0
+  crescenttool_core: 0
   crescenttool_product_category_filtering: 0
   crop: 0
   csv_serialization: 0
