--- a/config/crescenttool_au/default/core.entity_form_display.node.landing_page.default.yml
+++ b/config/crescenttool_au/default/core.entity_form_display.node.landing_page.default.yml
@@ -34,8 +34,8 @@ third_party_settings:
       children:
         - title
         - body
-        - field_component_hero
         - field_media
+        - field_component_hero
       label: Main
       region: content
       parent_name: group_tabs
@@ -51,6 +51,7 @@ third_party_settings:
       children:
         - field_components
       label: Content
+      region: content
       parent_name: group_tabs
       weight: 10
       format_type: tab
@@ -69,7 +70,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 0
+    weight: 3
     region: content
     settings:
       rows: 9
@@ -85,7 +86,7 @@ content:
     third_party_settings: {  }
   field_component_hero:
     type: paragraphs
-    weight: 0
+    weight: 5
     region: content
     settings:
       title: Paragraph
@@ -121,7 +122,7 @@ content:
     third_party_settings: {  }
   field_media:
     type: entity_reference_autocomplete
-    weight: 0
+    weight: 4
     region: content
     settings:
       match_operator: CONTAINS
@@ -172,7 +173,7 @@ content:
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 0
+    weight: 2
     region: content
     settings:
       size: 60
