VYRKCATG-340_CT: Fixed user permissions for CT AU.

--- a/config/crescenttool_au/default/user.role.authenticated.yml
+++ b/config/crescenttool_au/default/user.role.authenticated.yml
@@ -7,6 +7,7 @@ dependencies:
   module:
     - filter
     - media
+    - node_view_permissions
     - search
     - shortcut
     - system
@@ -25,4 +26,6 @@ permissions:
   - 'search content'
   - 'skip comment approval'
   - 'use text format limited_html'
+  - 'view any styleguide content'
   - 'view media'
+  - 'view own media_page content'
