--- a/config/gearwrench_au/default/user.role.anonymous.yml
+++ b/config/gearwrench_au/default/user.role.anonymous.yml
@@ -7,6 +7,7 @@ dependencies:
   module:
     - filter
     - media
+    - node_view_permissions
     - search
     - system
 _core:
@@ -21,4 +22,11 @@ permissions:
   - 'access site-wide contact form'
   - 'search content'
   - 'use text format restricted_html'
+  - 'view any landing_page content'
+  - 'view any media_page content'
+  - 'view any page content'
+  - 'view any product content'
+  - 'view any product_category content'
+  - 'view any product_industry content'
+  - 'view any social_post content'
   - 'view media'
