--- a/config/gearwrench_au/default/user.role.content_editor.yml
+++ b/config/gearwrench_au/default/user.role.content_editor.yml
@@ -8,6 +8,7 @@ dependencies:
     - media.type.audio
     - media.type.file
     - media.type.image
+    - media.type.remote_video
     - node.type.page
     - taxonomy.vocabulary.tags
   module:
