--- a/config/crescenttool_au/default/core.entity_form_display.paragraph.accordion.default.yml
+++ b/config/crescenttool_au/default/core.entity_form_display.paragraph.accordion.default.yml
@@ -21,6 +21,7 @@ third_party_settings:
         - field_class_custom
         - field_html_anchor
       label: Settings
+      region: content
       parent_name: ''
       weight: 0
       format_type: settings
