VYRKCATG-340_CT: Fixed further config issues.

--- a/config/crescenttool_au/default/block.block.crescenttool_help.yml
+++ b/config/crescenttool_au/default/block.block.crescenttool_help.yml
@@ -5,7 +5,7 @@ dependencies:
   module:
     - help
   theme:
-    - crescenttool
+    - crescenttool_au
 id: crescenttool_help
 theme: crescenttool_au
 region: content
