--- a/config/crescenttool_au/default/block.block.crescenttool_page_title.yml
+++ b/config/crescenttool_au/default/block.block.crescenttool_page_title.yml
@@ -6,7 +6,7 @@ dependencies:
     - node
     - system
   theme:
-    - crescenttool
+    - crescenttool_au
 id: crescenttool_page_title
 theme: crescenttool_au
 region: content
