--- a/config/crescenttool_au/default/block.block.header_search_block.yml
+++ b/config/crescenttool_au/default/block.block.header_search_block.yml
@@ -6,7 +6,7 @@ dependencies:
     - block_class
     - crescenttool_core
   theme:
-    - crescenttool
+    - crescenttool_au
 third_party_settings:
   block_class:
     classes: block--header-search
