--- a/config/crescenttool_au/default/responsive_image.styles.cta_slider_thumb.yml
+++ b/config/crescenttool_au/default/responsive_image.styles.cta_slider_thumb.yml
@@ -6,7 +6,7 @@ dependencies:
     - image.style.banner_cta_slider_large_scaled_height_50
     - image.style.banner_cta_slider_small_scaled_height_40
   theme:
-    - crescenttool
+    - crescenttool_au
 id: cta_slider_thumb
 label: 'CTA Slider Thumb'
 image_style_mappings:
