--- a/config/crescenttool_au/default/block.block.crescenttool_branding.yml
+++ b/config/crescenttool_au/default/block.block.crescenttool_branding.yml
@@ -6,7 +6,7 @@ dependencies:
     - block_class
     - system
   theme:
-    - crescenttool
+    - crescenttool_au
 third_party_settings:
   block_class:
     classes: block--header-branding
