--- a/config/crescenttool_au/default/block.block.crescenttool_messages.yml
+++ b/config/crescenttool_au/default/block.block.crescenttool_messages.yml
@@ -5,7 +5,7 @@ dependencies:
   module:
     - system
   theme:
-    - crescenttool
+    - crescenttool_au
 id: crescenttool_messages
 theme: crescenttool_au
 region: pre_content
