--- a/config/crescenttool_au/default/block.block.footer_navigation_block.yml
+++ b/config/crescenttool_au/default/block.block.footer_navigation_block.yml
@@ -5,7 +5,7 @@ dependencies:
   module:
     - crescenttool_core
   theme:
-    - crescenttool
+    - crescenttool_au
 id: footer_navigation_block
 theme: crescenttool_au
 region: footer_first
