--- a/config/crescenttool_au/default/block.block.webform.yml
+++ b/config/crescenttool_au/default/block.block.webform.yml
@@ -7,7 +7,7 @@ dependencies:
   module:
     - webform
   theme:
-    - crescenttool
+    - crescenttool_au
 id: webform
 theme: crescenttool_au
 region: footer_second
