--- a/config/crescenttool_au/default/block.block.wherebuypricespiderwidget.yml
+++ b/config/crescenttool_au/default/block.block.wherebuypricespiderwidget.yml
@@ -9,7 +9,7 @@ dependencies:
     - block_content
     - system
   theme:
-    - crescenttool
+    - crescenttool_au
 third_party_settings:
   block_class:
     classes: block-pricespider-generic-widget-block
