--- a/config/crescenttool_au/default/responsive_image.styles.content_half.yml
+++ b/config/crescenttool_au/default/responsive_image.styles.content_half.yml
@@ -6,7 +6,7 @@ dependencies:
     - image.style.medium_1x1
     - image.style.small_1x1
   theme:
-    - crescenttool
+    - crescenttool_au
 id: content_half
 label: 'Content Half'
 image_style_mappings:
