--- a/config/crescenttool_au/default/responsive_image.styles.cta_slider_16x9.yml
+++ b/config/crescenttool_au/default/responsive_image.styles.cta_slider_16x9.yml
@@ -8,7 +8,7 @@ dependencies:
     - image.style.small_landscape_416x255_
     - image.style.small_landscape_504x310_
   theme:
-    - crescenttool
+    - crescenttool_au
 id: cta_slider_16x9
 label: 'CTA Slider'
 image_style_mappings:
