VYRKCATG-340_CT: Fixing some import issues.

--- a/config/crescenttool_au/default/core.extension.yml
+++ b/config/crescenttool_au/default/core.extension.yml
@@ -37,6 +37,7 @@ module:
   config_split: 0
   contextual: 0
   crescenttool_core: 0
+  crescenttool_migrations: 0
   crescenttool_product_category_filtering: 0
   crop: 0
   csv_serialization: 0
