--- a/config/crescenttool_au/default/migrate_plus.migration.crescenttool_product_category_pages_level_one.yml
+++ b/config/crescenttool_au/default/migrate_plus.migration.crescenttool_product_category_pages_level_one.yml
@@ -71,7 +71,8 @@ process:
     source: remote_name
     depth: 2
   field_product_classifications:
-    - plugin: skip_on_empty
+    -
+      plugin: skip_on_empty
       method: process
       source: '@product_classifications_array'
     -
