--- a/config/crescenttool_au/default/migrate_plus.migration.crescenttool_product_category_pages_level_two.yml
+++ b/config/crescenttool_au/default/migrate_plus.migration.crescenttool_product_category_pages_level_two.yml
@@ -132,7 +132,8 @@ process:
     plugin: apex_get_product_classification_children
     source: remote_classification
   field_product_classifications:
-    - plugin: skip_on_empty
+    -
+      plugin: skip_on_empty
       method: process
       source: '@product_classifications_array'
     -
