--- a/config/crescenttool_au/default/block.block.adminthemestyling.yml
+++ b/config/crescenttool_au/default/block.block.adminthemestyling.yml
@@ -9,7 +9,7 @@ dependencies:
   theme:
     - seven
 id: adminthemestyling
-theme: seven
+theme: crescenttool_au
 region: header
 weight: -4
 provider: null
