VYRKCATG-340_CT: Exported the prod config from Prod copydown.

--- a/config/gearwrench_au/default/block.block.adminthemestyling.yml
+++ b/config/gearwrench_au/default/block.block.adminthemestyling.yml
@@ -9,7 +9,7 @@ dependencies:
   theme:
     - seven
 id: adminthemestyling
-theme: gearwrench_au
+theme: seven
 region: header
 weight: -4
 provider: null
