--- a/config/gearwrench_au/default/search_api.server.acquia_search_server.yml
+++ b/config/gearwrench_au/default/search_api.server.acquia_search_server.yml
@@ -42,6 +42,7 @@ backend_config:
   connector_config:
     identifier: AGQV-204467
     api_key: 7a8b05544b5e601d98d16d51452d676f
+    uuid: 118e52af-17d6-4350-a54c-2a2e659b1657
     api_host: 'https://api.sr-prod02.acquia.com'
     skip_schema_check: true
   optimize: false
@@ -56,3 +57,4 @@ backend_config:
     - request_dispatcher_httpcaching_default_7_0_0
   rows: 10
   index_single_documents_fallback_count: 10
+  index_empty_text_fields: false
