--- a/config/gearwrench_au/default/core.extension.yml
+++ b/config/gearwrench_au/default/core.extension.yml
@@ -1,5 +1,6 @@
 module:
   acquia_connector: 0
+  acquia_purge: 0
   acquia_search: 0
   address: 0
   admin_toolbar: 0
@@ -40,6 +41,8 @@ module:
   current_page_crumb: 0
   datetime: 0
   datetime_range: 0
+  dblog: 0
+  devel: 0
   devel_generate: 0
   dynamic_page_cache: 0
   editor: 0
@@ -105,6 +108,11 @@ module:
   path_alias: 0
   path_redirect_import: 0
   permissions_filter: 0
+  purge: 0
+  purge_processor_cron: 0
+  purge_processor_lateruntime: 0
+  purge_queuer_coretags: 0
+  purge_ui: 0
   quick_node_clone: 0
   rdf: 0
   redirect: 0
@@ -121,6 +129,7 @@ module:
   shortcut: 0
   simple_sitemap: 0
   smart_trim: 0
+  stage_file_proxy: 0
   swiftmailer: 0
   system: 0
   taxonomy: 0
@@ -138,6 +147,7 @@ module:
   video_embed_field: 0
   video_embed_media: 0
   views_data_export: 0
+  views_ui: 0
   viewsreference: 0
   webform: 0
   webform_attachment: 0
