--- a/config/gearwrench_au/default/field.field.node.page.field_media.yml
+++ b/config/gearwrench_au/default/field.field.node.page.field_media.yml
@@ -5,6 +5,8 @@ dependencies:
   config:
     - field.storage.node.field_media
     - media.type.image
+    - media.type.remote_video
+    - media.type.video
     - node.type.page
 _core:
   default_config_hash: jTfhF4NMRJ_dqnKHBUq100as4RBpjR42KllAmpQ-t54
@@ -23,8 +25,11 @@ settings:
   handler_settings:
     target_bundles:
       image: image
+      remote_video: remote_video
+      video: video
     sort:
       field: _none
+      direction: ASC
     auto_create: false
-    auto_create_bundle: ''
+    auto_create_bundle: image
 field_type: entity_reference
