VYRKCATG-340_CT: More adjustments for GW.

--- a/config/gearwrench_au/default/config_split.config_split.remote_dev.yml
+++ b/config/gearwrench_au/default/config_split.config_split.remote_dev.yml
@@ -10,11 +10,13 @@ description: ''
 weight: 0
 folder: ../config/gearwrench_au/remote_dev
 module:
+  acquia_connector: 0
   dblog: 0
-  shield: 0
   stage_file_proxy: 0
+  shield: 0
 theme: {  }
-blacklist: {  }
+blacklist:
+  - purge.logger_channels
 graylist: {  }
 graylist_dependents: true
 graylist_skip_equal: true
