--- a/config/gearwrench_au/default/config_split.config_split.local.yml
+++ b/config/gearwrench_au/default/config_split.config_split.local.yml
@@ -10,8 +10,11 @@ description: ''
 weight: -5
 folder: ../config/gearwrench_au/local
 module:
+  acquia_connector: 0
+  acquia_purge: 0
   dblog: 0
   devel: 0
+  devel_generate: 0
   stage_file_proxy: 0
   views_ui: 0
 theme: {  }
@@ -20,6 +23,8 @@ graylist:
   - advagg.settings
   - advagg_css_minify.settings
   - advagg_js_minify.settings
+  - core.extension
+  - google_tag.container.primary
   - system.performance
 graylist_dependents: true
-graylist_skip_equal: false
+graylist_skip_equal: true
