--- a/config/gearwrench_au/default/config_split.config_split.remote_prod.yml
+++ b/config/gearwrench_au/default/config_split.config_split.remote_prod.yml
@@ -10,11 +10,20 @@ description: ''
 weight: 0
 folder: ../config/gearwrench_au/remote_prod
 module:
+  acquia_connector: 0
   captcha: 0
   recaptcha: 0
   syslog: 0
 theme: {  }
-blacklist: {  }
-graylist: {  }
+blacklist:
+  - purge.logger_channels
+graylist:
+  - gearwrench_core.settings
+  - google_tag.container.google_tag_59x3zt8
+  - google_tag.container.primary
+  - purge.logger_channels
+  - purge.plugins
+  - system.performance
+  - purge_queuer_coretags.settings
 graylist_dependents: true
 graylist_skip_equal: true
