ctau_config: Updating the prod config for CT AU.

--- a/config/crescenttool_au/default/block.block.crescenttool_breadcrumbs.yml
+++ b/config/crescenttool_au/default/block.block.crescenttool_breadcrumbs.yml
@@ -5,7 +5,7 @@ dependencies:
   module:
     - system
   theme:
-    - crescenttool_au
+    - crescenttool
 id: crescenttool_breadcrumbs
 theme: crescenttool_au
 region: content
