--- a/config/crescenttool_au/default/block.block.crescenttool_footer.yml
+++ b/config/crescenttool_au/default/block.block.crescenttool_footer.yml
@@ -7,7 +7,7 @@ dependencies:
   module:
     - system
   theme:
-    - crescenttool_au
+    - crescenttool
 id: crescenttool_footer
 theme: crescenttool_au
 region: footer_first
