--- a/config/crescenttool_au/default/block.block.header_menu_main.yml
+++ b/config/crescenttool_au/default/block.block.header_menu_main.yml
@@ -8,7 +8,7 @@ dependencies:
     - block_class
     - system
   theme:
-    - crescenttool_au
+    - crescenttool
 third_party_settings:
   block_class:
     classes: block--header-menu-main
