--- a/config/crescenttool_au/default/block.block.productbuynowsticky.yml
+++ b/config/crescenttool_au/default/block.block.productbuynowsticky.yml
@@ -6,7 +6,7 @@ dependencies:
     - crescenttool_core
     - node
   theme:
-    - crescenttool_au
+    - crescenttool
 id: productbuynowsticky
 theme: crescenttool_au
 region: pre_content
