--- a/config/crescenttool_au/default/block.block.views_block__acquia_search_block_1.yml
+++ b/config/crescenttool_au/default/block.block.views_block__acquia_search_block_1.yml
@@ -8,7 +8,7 @@ dependencies:
     - system
     - views
   theme:
-    - crescenttool_au
+    - crescenttool
 id: views_block__acquia_search_block_1
 theme: crescenttool_au
 region: post_content
