--- a/config/crescenttool_au/default/config_split.config_split.remote_prod.yml
+++ b/config/crescenttool_au/default/config_split.config_split.remote_prod.yml
@@ -10,6 +10,7 @@ description: ''
 weight: 0
 folder: ../config/crescenttool_au/remote_prod
 module:
+  acquia_connector: 0
   captcha: 0
   recaptcha: 0
   syslog: 0
