--- a/config/crescenttool_au/default/core.extension.yml
+++ b/config/crescenttool_au/default/core.extension.yml
@@ -1,5 +1,3 @@
-_core:
-  default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
 module:
   acquia_purge: 0
   acquia_search: 0
@@ -45,6 +43,8 @@ module:
   current_page_crumb: 0
   datetime: 0
   datetime_range: 0
+  dblog: 0
+  devel: 0
   devel_generate: 0
   dynamic_page_cache: 0
   editor: 0
@@ -105,6 +105,7 @@ module:
   paragraphs_component_field: 0
   path: 0
   path_alias: 0
+  path_redirect_import: 0
   permissions_filter: 0
   purge: 0
   purge_drush: 0
@@ -124,11 +125,11 @@ module:
   search: 0
   search_api: 0
   search_api_solr: 0
-  selective_better_exposed_filters: 0
   serialization: 0
   shortcut: 0
   simple_sitemap: 0
   smart_trim: 0
+  stage_file_proxy: 0
   swiftmailer: 0
   system: 0
   taxonomy: 0
@@ -154,6 +155,7 @@ module:
   webform_ui: 0
   limited_field_widgets: 1
   pathauto: 1
+  selective_better_exposed_filters: 1
   views: 10
   paragraphs: 11
   blackbird: 1000
