--- a/config/crescenttool_au/default/responsive_image.styles.content_callout.yml
+++ b/config/crescenttool_au/default/responsive_image.styles.content_callout.yml
@@ -6,7 +6,7 @@ dependencies:
     - image.style.medium_1x1
     - image.style.small_1x1
   theme:
-    - crescenttool_au
+    - crescenttool
 id: content_callout
 label: 'Content Callout'
 image_style_mappings:
