--- a/config/crescenttool_au/default/responsive_image.styles.content_top_bottom.yml
+++ b/config/crescenttool_au/default/responsive_image.styles.content_top_bottom.yml
@@ -8,7 +8,7 @@ dependencies:
     - image.style.medium_landscape_3x1
     - image.style.small_landscape_3x2
   theme:
-    - crescenttool_au
+    - crescenttool
 id: content_top_bottom
 label: 'Content - Top/Bottom'
 image_style_mappings:
