--- a/config/crescenttool_au/default/responsive_image.styles.short_hero.yml
+++ b/config/crescenttool_au/default/responsive_image.styles.short_hero.yml
@@ -10,7 +10,7 @@ dependencies:
     - image.style.medium_landscape_5x4
     - image.style.small_landscape_4x3
   theme:
-    - crescenttool_au
+    - crescenttool
 id: short_hero
 label: 'Short Hero'
 image_style_mappings:
