--- a/config/crescenttool_au/default/responsive_image.styles.teaser.yml
+++ b/config/crescenttool_au/default/responsive_image.styles.teaser.yml
@@ -6,7 +6,7 @@ dependencies:
     - image.style.small_1x1
     - image.style.tiny_1x1
   theme:
-    - crescenttool_au
+    - crescenttool
 id: teaser
 label: Teaser
 image_style_mappings:
