--- a/config/crescenttool_au/default/advagg.settings.yml
+++ b/config/crescenttool_au/default/advagg.settings.yml
@@ -1,5 +1,3 @@
-_core:
-  default_config_hash: Vi3b7DLLNw5X1UX9XG8mnU-ysvyNgdyvAasxV9yck3I
 css:
   brotli: true
   combine_media: false
@@ -13,7 +11,7 @@ path:
     force_https: false
 cache_level: 2
 cron_frequency: 86400
-enabled: true
+enabled: false
 global_counter: 0
 immutable: true
 js:
