--- a/config/crescenttool_au/default/block.block.crescenttool_local_actions.yml
+++ b/config/crescenttool_au/default/block.block.crescenttool_local_actions.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   theme:
-    - crescenttool_au
+    - crescenttool
 id: crescenttool_local_actions
 theme: crescenttool_au
 region: content
