--- a/config/crescenttool_au/default/config_split.config_split.local.yml
+++ b/config/crescenttool_au/default/config_split.config_split.local.yml
@@ -10,8 +10,11 @@ description: ''
 weight: -5
 folder: ../config/crescenttool_au/local
 module:
+  acquia_connector: 0
+  acquia_purge: 0
   dblog: 0
   devel: 0
+  devel_generate: 0
   stage_file_proxy: 0
   views_ui: 0
 theme: {  }
