--- a/config/crescenttool_au/default/config_split.config_split.remote_dev.yml
+++ b/config/crescenttool_au/default/config_split.config_split.remote_dev.yml
@@ -10,9 +10,10 @@ description: ''
 weight: 0
 folder: ../config/crescenttool_au/remote_dev
 module:
+  acquia_connector: 0
   dblog: 0
-  shield: 0
   stage_file_proxy: 0
+  shield: 0
 theme: {  }
 blacklist:
   - purge.logger_channels
