--- a/config/crescenttool_au/remote_prod/acquia_connector.settings.yml
+++ b/config/crescenttool_au/remote_prod/acquia_connector.settings.yml
@@ -1,3 +1,5 @@
+_core:
+  default_config_hash: 6phbBhcYjncqxncwDHAImFHb0MAKamGB_HQy53AfN9s
 subscription_name: ''
 debug: false
 cron_interval: 30
@@ -32,7 +34,6 @@ spi:
     variables: {  }
     time: 0
   cron_interval: 28800
-  site_environment: prod
   env_detection_enabled: true
 mapping:
   acquia_spi_send_node_user:
