--- a/config/gearwrench_au/default/block.block.adminthemestyling.yml
+++ b/config/gearwrench_au/default/block.block.adminthemestyling.yml
@@ -7,9 +7,9 @@ dependencies:
   module:
     - block_content
   theme:
-    - seven
+    - gearwrench_au
 id: adminthemestyling
-theme: seven
+theme: gearwrench_au
 region: header
 weight: -4
 provider: null
