--- a/config/gearwrench_au/default/core.entity_form_display.paragraph.featured_media.default.yml
+++ b/config/gearwrench_au/default/core.entity_form_display.paragraph.featured_media.default.yml
@@ -16,10 +16,11 @@ third_party_settings:
   field_group:
     group_settings:
       children:
-        - status
         - field_style
-        - field_class_custom
+        - field_layout
         - field_html_anchor
+        - field_class_custom
+        - status
       label: Settings
       region: content
       parent_name: ''
@@ -37,7 +38,7 @@ mode: default
 content:
   field_class_custom:
     type: string_textfield
-    weight: 8
+    weight: 10
     region: content
     settings:
       size: 60
@@ -53,7 +54,7 @@ content:
     third_party_settings: {  }
   field_layout:
     type: options_select
-    weight: 1
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -72,7 +73,7 @@ content:
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 6
+    weight: 11
     region: content
     settings:
       display_label: true
