--- a/config/gearwrench_au/default/field.field.paragraph.embed_view.field_embed_view.yml
+++ b/config/gearwrench_au/default/field.field.paragraph.embed_view.field_embed_view.yml
@@ -27,18 +27,37 @@ settings:
   plugin_types:
     default: default
     block: block
+    embed: embed
     page: 0
     feed: 0
+    entity_reference: 0
+    data_export: 0
   preselect_views:
+    acquia_search: 0
     block_content: 0
     content: 0
     content_recent: 0
     files: 0
     frontpage: 0
+    media: 0
+    media_library: 0
+    media_pages: 0
+    new_products: 0
+    products: 0
+    product_category: 0
+    product_category_grid: 0
+    product_category_pages: 0
+    product_entity_autocomplete: 0
+    product_industry_grid: 0
     redirect: 0
     redirect_404: 0
+    related_products: 0
+    search: 0
+    social_feed: 0
     taxonomy_term: 0
     user_admin_people: 0
+    watchdog: 0
+    webform_submissions: 0
     who_s_new: 0
     who_s_online: 0
   enabled_settings:
