Fixed the CT warranty form and a few missing components.

--- a/config/crescenttool/default/webform.webform.warranty_replacement_form.yml
+++ b/config/crescenttool/default/webform.webform.warranty_replacement_form.yml
@@ -49,6 +49,7 @@ elements: |-
               view_name: product_entity_autocomplete
               display_name: entity_reference_1
               arguments: {  }
+          '#required': true
         product_image:
           '#type': webform_image_file
           '#title': 'Send us a photo'
