--- a/config/gearwrench_au/default/field.field.node.landing_page.field_components.yml
+++ b/config/gearwrench_au/default/field.field.node.landing_page.field_components.yml
@@ -7,14 +7,18 @@ dependencies:
     - node.type.landing_page
     - paragraphs.paragraphs_type.accordion
     - paragraphs.paragraphs_type.content
+    - paragraphs.paragraphs_type.content_2_column
+    - paragraphs.paragraphs_type.content_callout_container
     - paragraphs.paragraphs_type.embed_block
     - paragraphs.paragraphs_type.embed_iframe
     - paragraphs.paragraphs_type.embed_view
     - paragraphs.paragraphs_type.featured_content
     - paragraphs.paragraphs_type.featured_links
     - paragraphs.paragraphs_type.featured_media
+    - paragraphs.paragraphs_type.product_slider
     - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.section
+    - paragraphs.paragraphs_type.steps
     - paragraphs.paragraphs_type.tabs
   module:
     - entity_reference_revisions
@@ -33,63 +37,85 @@ default_value_callback: ''
 settings:
   handler: 'default:paragraph'
   handler_settings:
-    negate: 0
     target_bundles:
       accordion: accordion
       content: content
+      content_2_column: content_2_column
+      content_callout_container: content_callout_container
       embed_block: embed_block
       embed_iframe: embed_iframe
       embed_view: embed_view
       featured_content: featured_content
       featured_links: featured_links
       featured_media: featured_media
+      product_slider: product_slider
       pullquote: pullquote
       section: section
+      steps: steps
       tabs: tabs
+    negate: 0
     target_bundles_drag_drop:
       accordion:
+        weight: -43
         enabled: true
-        weight: 16
       accordion_item:
-        weight: 17
+        weight: -42
         enabled: false
       content:
+        weight: -41
         enabled: true
-        weight: 18
+      content_2_column:
+        weight: -40
+        enabled: true
+      content_callout:
+        weight: -31
+        enabled: false
+      content_callout_container:
+        weight: -39
+        enabled: true
       embed_block:
+        weight: -38
         enabled: true
-        weight: 19
       embed_iframe:
+        weight: -37
         enabled: true
-        weight: 20
       embed_view:
+        weight: -36
         enabled: true
-        weight: 21
       featured_content:
+        weight: -35
         enabled: true
-        weight: 22
       featured_links:
+        weight: -34
         enabled: true
-        weight: 23
       featured_media:
+        weight: -33
         enabled: true
-        weight: 24
       hero:
-        weight: 25
+        weight: -32
         enabled: false
       hero_slide:
-        weight: 26
+        weight: -30
         enabled: false
+      product_slider:
+        weight: -29
+        enabled: true
       pullquote:
+        weight: -28
         enabled: true
-        weight: 27
       section:
+        weight: -27
         enabled: true
-        weight: 28
+      step:
+        weight: -23
+        enabled: false
+      steps:
+        weight: -26
+        enabled: true
       tabs:
+        weight: -25
         enabled: true
-        weight: 29
       tabs_tab:
-        weight: 30
+        weight: -24
         enabled: false
 field_type: entity_reference_revisions
