--- a/config/gearwrench_au/default/field.field.node.page.field_components.yml
+++ b/config/gearwrench_au/default/field.field.node.page.field_components.yml
@@ -7,6 +7,8 @@ dependencies:
     - node.type.page
     - paragraphs.paragraphs_type.accordion
     - paragraphs.paragraphs_type.content
+    - paragraphs.paragraphs_type.content_2_column
+    - paragraphs.paragraphs_type.content_callout_container
     - paragraphs.paragraphs_type.embed_block
     - paragraphs.paragraphs_type.embed_iframe
     - paragraphs.paragraphs_type.embed_view
@@ -14,8 +16,10 @@ dependencies:
     - paragraphs.paragraphs_type.featured_links
     - paragraphs.paragraphs_type.featured_media
     - paragraphs.paragraphs_type.hero
+    - paragraphs.paragraphs_type.product_slider
     - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.section
+    - paragraphs.paragraphs_type.steps
     - paragraphs.paragraphs_type.tabs
   module:
     - entity_reference_revisions
@@ -34,79 +38,86 @@ default_value_callback: ''
 settings:
   handler: 'default:paragraph'
   handler_settings:
-    negate: 0
     target_bundles:
-      content: content
       accordion: accordion
+      content: content
+      content_2_column: content_2_column
+      content_callout_container: content_callout_container
       embed_block: embed_block
       embed_iframe: embed_iframe
       embed_view: embed_view
       featured_content: featured_content
+      featured_links: featured_links
       featured_media: featured_media
       hero: hero
-      featured_links: featured_links
+      product_slider: product_slider
       pullquote: pullquote
       section: section
+      steps: steps
       tabs: tabs
+    negate: 0
     target_bundles_drag_drop:
-      content:
-        enabled: true
-        weight: -41
       accordion:
+        weight: -43
         enabled: true
-        weight: -40
       accordion_item:
         weight: -39
         enabled: false
-      embed_block:
+      content:
+        weight: -42
         enabled: true
-        weight: -38
-      embed_iframe:
+      content_2_column:
+        weight: -41
         enabled: true
-        weight: -37
-      embed_view:
-        enabled: true
-        weight: -36
-      featured_content:
-        enabled: true
-        weight: -35
-      featured_media:
-        enabled: true
-        weight: -34
-      hero:
-        enabled: true
-        weight: -33
-      hero_slide:
-        weight: -32
-        enabled: false
-      featured_links:
-        enabled: true
-        weight: -31
-      pod:
-        enabled: true
-        weight: -30
-      pod_pea_content:
-        weight: -29
-        enabled: false
-      pullquote:
-        enabled: true
-        weight: -28
-      section:
-        enabled: true
-        weight: -27
-      slider:
-        enabled: true
-        weight: -26
-      slider_slide_photo:
-        weight: -25
-        enabled: false
-      slider_slide_video:
+      content_callout:
         weight: -24
         enabled: false
-      tabs:
+      content_callout_container:
+        weight: -40
         enabled: true
+      embed_block:
+        weight: -38
+        enabled: true
+      embed_iframe:
+        weight: -37
+        enabled: true
+      embed_view:
+        weight: -36
+        enabled: true
+      featured_content:
+        weight: -35
+        enabled: true
+      featured_links:
+        weight: -34
+        enabled: true
+      featured_media:
+        weight: -33
+        enabled: true
+      hero:
+        weight: -32
+        enabled: true
+      hero_slide:
+        weight: -31
+        enabled: false
+      product_slider:
+        weight: -30
+        enabled: true
+      pullquote:
+        weight: -29
+        enabled: true
+      section:
+        weight: -28
+        enabled: true
+      step:
         weight: -23
+        enabled: false
+      steps:
+        weight: -27
+        enabled: true
+      tabs:
+        weight: -26
+        enabled: true
       tabs_tab:
-        weight: -22
+        weight: -25
         enabled: false
 field_type: entity_reference_revisions
